--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ img {
 }
 
 .section-paddings {
-  margin-bottom: 120px;
+  margin-bottom: 120px 0;
 }
 
 /* Header */
@@ -125,7 +125,7 @@ img {
 .main-background {
     background: #2e2f42;
     line-height: 1.07;
-   
+   padding: 188px 0;
 
 } 
 
@@ -140,6 +140,9 @@ img {
     color: #fff;
     margin-bottom: 47px;
     padding-top: 189px;
+    max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
@@ -159,6 +162,10 @@ img {
   text-align: center;
   margin-left: 480px;
   margin-bottom: 188px;
+  display: block;
+  min-width: 169px;
+  margin-left: auto;
+    margin-right: auto;
   }
 
 .main-button:hover, .main-button:focus {
@@ -201,6 +208,10 @@ width: 264px;
   gap: 24px;
 }
 
+.element-list-goals {
+  width: calc((100% - 72px) / 4);
+}
+
 /* section 3 */
 
 .our-team-section {
@@ -239,8 +250,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
   margin: 32px 0;
+  padding: 32px 0;
 }
 
 .our-team-names {
@@ -249,7 +260,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  
+  text-align: center;
+  margin-bottom: 8px
 }
 
 .our-team-text {
@@ -257,6 +269,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  text-align: center;
 }
 
 /* section 4 */
@@ -276,18 +289,23 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
   display: flex;
   gap: 24px;
   flex-wrap: wrap;
+  row-gap: 48px;
 }
 
 .our-portfolio-underfoto {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 8px;
+  
   align-items: flex-start;
   border-bottom: 1px solid #e7e9fc;
     border-left: 1px solid #e7e9fc;
     border-right: 1px solid #e7e9fc;
     padding: 32px 16px;
+}
+
+.element-our-portfolio-list {
+  width: calc((100% - 48px) / 3);
 }
 
 .our-portfolio-names {
@@ -296,6 +314,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .our-portfolio-text {
@@ -310,6 +329,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 
 .footer {
 background-color: #2e2f42;
+padding: 100px 0;
 }
 
 .logo-footer {
@@ -321,6 +341,8 @@ background-color: #2e2f42;
   text-transform: uppercase;
   color: #4d5ae5;
 
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .accent-footer {
@@ -338,13 +360,7 @@ background-color: #2e2f42;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #f4f4fd;
-        width: 264px;
+        max-width: 264px;
         
-      }
 
-.footer-all-text {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  padding: 100px 0;
-}
+      }
