--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 32pxgit;
+  margin-top: 32px;
 
 }
 
